--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,8 +4,7 @@
   html5up.net | @n33co
 
   bg.jpg is from freepik.com
-  Snow photo created by wirestock
-  https://www.freepik.com/photos/snow
+  by wirestock
 
 
 */
